# emotion-ai-agent-system

./: .gitignore  Cargo.toml  LICENSE  README.md  setup-github.sh
src/: behavior.rs  coefficients.rs  main.rs  ranges.rs  system_prompt.rs
